--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.177",
+    "date-fns": "^2.26.0",
+    "date-fns-tz": "^1.1.6",
+    "googleapis": "^91.0.0",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-google-cal": "^1.2.0",
+    "react-google-calendar-api": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.9",
+    "@types/react": "^17.0.36",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "typescript": "^4.5.2"
   }
 }
